--- a/Ejercicio5Modulo3/appsettings.json
+++ b/Ejercicio5Modulo3/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433;Database=master;User Id=sa;Password=Password12345;"
   },
-  "AllowedHosts": "*"
+  
+  "AllowedHosts": "*",
+  
+  "SEED_RESULT_NUMBER": "https://randomuser.me/api"
 }
